# viking-paper-experiments

./: .gitignore  README.md  pyproject.toml
experiments/: ivon_classifier.py  ivon_eval_classifier.py  ivon_eval_generator.py  ivon_eval_ood.py  ivon_generates.py  sgmcmc_classifier.py  sgmcmc_eval_classifier.py  viking_classifier.py  viking_eval_classifier.py  viking_eval_generator.py  viking_eval_ood.py  viking_generate.py
experiments/regress_sinusoid_ivon/: main_sin.py
experiments/regress_sinusoid_viking/: main_sin_full_elbo.py
src/: sgmcmc.py
src/vp/: _words.py  datasets.py  eval.py  helper.py  ivon.py  losses.py  mnist.py  plot.py  stats.py  swag.py  utils.py  viking.py
src/vp/data/: __init__.py  all_datasets.py  arrays_data.py  cifar10.py  cifar100.py  emnist.py  fmnist.py  imagenet.py  imagenette.py  kmnist.py  mnist.py  oxford_flowers.py  sinusoidal.py  svhn.py  utils.py
src/vp/models/: __init__.py  celeba_linen.py  configs.py  convnet.py  densenet.py  dit.py  fc.py  fmnist_vae_linen.py  inception.py  lenet.py  mlp.py  resnet_18.py  resnet_small.py  simple.py  unet.py  utils.py  vae.py  vit.py
src/vp/ood_functions/: evaluate.py  metrics.py
src/vp/sampling/: __init__.py  alternating_loss_projections.py  alternating_projections.py  precompute_inv.py  precompute_loss_inv.py  predictive_samplers.py  projection_loss_sampling.py  projection_sampling.py  sample_utils.py
tests/: imagenette.py  test_viking.py
